new product model and component

--- a/src/app/components/feature/feature.component.html
+++ b/src/app/components/feature/feature.component.html
@@ -27,7 +27,7 @@
     <p>
       Lookout for Fall clothing collection coming out soon next month! While
       you're at it, checkout for sales from
-      <span><a href="#">last season's lineup.</a></span>
+      <span><a [routerLink]="['/cartify']">last season's lineup.</a></span>
     </p>
   </div>
 </div>
