--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -60,7 +60,15 @@ i {
 }
 
 .push-icon {
-  color: #ffff;
   padding-left: 10px;
   color: $text-color;
+}
+
+.copyright {
+  font-size: 22px;
+}
+
+.social-media {
+  font-size: 28px;
+
 }
