--- a/src/app/components/trending/trending.component.html
+++ b/src/app/components/trending/trending.component.html
@@ -20,6 +20,35 @@
   </div>
 </div>
 <div class="row">
+  <div class="col-12">
+    <div class="row">
+      <div class="col">
+        <hr />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 online-detail">
+        <h1 class="text-center">
+          Order online. Pick it up at the store. Enjoy!
+        </h1>
+        <p class="text-center">
+          Now all on the same day.
+          <a [routerLink]="['cartify']"> Get the details.</a>
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="row">
+          <div class="col-12">
+            <hr />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <div class="row ">
   <div class="col-lg-4 col-12">
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis molestias
     sapiente, quod dolorum itaque odit. Deleniti dolor necessitatibus magnam
@@ -37,4 +66,4 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum amet
     dolore saepe tenetur asperiores.
   </div>
-</div>
+</div> -->
