--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
-  <!-- <div class="row">
+  <div class="row">
     <div class="col-12">
-      <div class="container"> -->
-  <router-outlet></router-outlet>
-  <!-- </div>
+      <div class="container">
+        <router-outlet></router-outlet>
+      </div>
     </div>
-  </div> -->
+  </div>
 </div>
 <app-footer></app-footer>
