--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -32,10 +32,10 @@
     </ul>
   </div>
 </div>
-<div id="footer" class="row underline-row justify-content-around">
+<div id="footer" class="row underline-row d-flex justify-content-around">
   <div class="col-lg-4 my-auto p-5">
     <div class="row contact-info py-2">
-      <div class="col-12">
+      <div class="col-12 ">
         <p>
           <i class="fas fa-phone-alt"
             ><span class="push-icon">1-800-123-4567</span></i
@@ -100,12 +100,18 @@
 <div id="footer" class="row footer-contact">
   <div class="col-md-6 p-5">
     <i class="fas fa-copyright"
-      ><span class="push-icon">2019 Cartify Inc.</span></i
+      ><span class="push-icon copyright">2019 Cartify Inc.</span></i
     >
   </div>
-  <div class="col-md-6 p-5 mr-auto">
-    <i class="fab fa-facebook-f"></i>
-    <i class="fab fa-twitter"></i>
-    <i class="fab fa-instagram"></i>
+  <div class="col-md-6 p-5 d-flex flex-row-reverse">
+    <a href="http://www.facebook.com"
+      ><i class="fab fa-facebook-f px-4 social-media"></i
+    ></a>
+    <a href="http://www.twitter.com"
+      ><i class="fab fa-twitter px-4 social-media"></i
+    ></a>
+    <a href="http://www.instagram.com"
+      ><i class="fab fa-instagram px-4 social-media"></i
+    ></a>
   </div>
 </div>
