--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:300&display=swap");
 #navbar {
   background-color: #000000;
 }
@@ -12,6 +12,7 @@
 .navbar-item {
   font-family: "Roboto Slab", serif;
   color: #fff;
+  font-weight: 100 !important;
   cursor: pointer;
 }
 
