--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:300&display=swap');
 // font-family: 'Archivo Black', sans-serif;
 // font-family: 'Domine', serif;
 // font-family: 'Roboto', sans-serif;
@@ -30,6 +30,7 @@ sans-serif;
 .navbar-item {
   font-family: $font-nav;
   color: #fff;
+  font-weight: 100 !important;
 
   &:hover {
     color: #749102
