--- a/src/app/components/findstore/findstore.component.css
+++ b/src/app/components/findstore/findstore.component.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
 #findstore {
   background-color: #f2f2f2;
+  margin: 0px -15px;
 }
 /*# sourceMappingURL=findstore.component.css.map */
