--- a/src/app/components/findstore/findstore.component.html
+++ b/src/app/components/findstore/findstore.component.html
@@ -1,18 +1,23 @@
-<div id="findstore" class="row p-4 m-4">
-    <div class="col-12  text-center">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sunt reprehenderit modi natus, dolores sed molestiae magnam harum assumenda ducimus!
-    </div>
-<div class="row">
+<div id="findstore" class="row no-gutters p-4">
+  <div class="col-12  text-center">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sunt
+    reprehenderit modi natus, dolores sed molestiae magnam harum assumenda
+    ducimus!
+  </div>
+  <div class="row">
     <div class="col-12 text-center p-3">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium voluptas obcaecati ratione inventore, dolor distinctio numquam quos repudiandae iusto ex.
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+      voluptas obcaecati ratione inventore, dolor distinctio numquam quos
+      repudiandae iusto ex.
     </div>
-</div>
-<div class="row">
-</div>
+  </div>
+  <div class="row">
     <div class="col-12 text-center p-3">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum at laudantium ipsa deserunt saepe et nobis fugit libero sequi porro.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum at
+      laudantium ipsa deserunt saepe et nobis fugit libero sequi porro.
     </div>
     <div class="col-12 text-center p-3">
-        <button class="btn btn-primary">Find a store</button>
+      <button class="btn btn-primary">Find a store</button>
     </div>
+  </div>
 </div>
