--- a/src/app/components/Product_Component/details/details.component.css
+++ b/src/app/components/Product_Component/details/details.component.css
@@ -1,2 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Inconsolata|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+h1 {
+  font-family: "Inconsolata", monospace;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+}
+
+button {
+  background-color: #00485B;
+}
 /*# sourceMappingURL=details.component.css.map */
