--- a/src/app/components/Product_Component/details/details.component.html
+++ b/src/app/components/Product_Component/details/details.component.html
@@ -1,1 +1,31 @@
-<p>details works!</p>
+<div id="details" class="row">
+  <div class="col-md-6">
+    <img src="{{ oneProduct.imagePath }}" />
+    <p class="text-info">{{ oneProduct.description }}</p>
+  </div>
+  <div class="col-md-6">
+    <h1>{{ oneProduct.name }}</h1>
+    <p class="text-info">$ {{ oneProduct.price }}</p>
+    <form (ngSubmit)="addToCart(oneProduct._id)">
+      <button>Add to cart</button>
+    </form>
+  </div>
+</div>
+<!-- <div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="..." class="card-img" alt="..." />
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{ oneProduct.name }}</h5>
+          <p class="card-text">
+            {{ oneProduct.description }}
+          </p>
+          <p class="card-text">
+            <small class="text-muted">{{ oneProduct.price }}</small>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div> -->
