--- a/src/app/components/Product_Component/details/details.component.scss
+++ b/src/app/components/Product_Component/details/details.component.scss
@@ -1,7 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Inconsolata|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+
+// font-family: 'Archivo Black', sans-serif;
+// font-family: 'Domine', serif;
+// font-family: 'Roboto', sans-serif;
+// font-family: 'Roboto Condensed', sans-serif;
+// font-family: 'Roboto Slab', serif;
+// font-family: 'Inconsolata', monospace;
 
 $font-h1:'Domine',
 serif;
+$font-h1-alternative:'Inconsolata',
+monospace;
 $font-h2:'Archivo Black',
 sans-serif;
 $font-h5:'Roboto Condensed',
@@ -12,3 +21,15 @@ serif;
 
 $font-generic:'Roboto',
 sans-serif;
+
+h1 {
+  font-family: $font-h1-alternative
+}
+
+p {
+  font-family: $font-generic;
+}
+
+button {
+  background-color: #00485B;
+}
