--- a/src/app/components/Product_Component/products/products.component.css
+++ b/src/app/components/Product_Component/products/products.component.css
@@ -13,18 +13,26 @@ p {
 
 .search-icon {
   position: absolute;
-  right: 8px;
+  right: 30px;
   top: 8px;
-}
-
-.ellipsis {
-  text-overflow: ellipsis;
-  /* Required for text-overflow to do anything */
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .card {
   max-height: 100%;
+}
+
+::ng-deep .ngx-pagination {
+  -ms-flex-line-pack: center !important;
+      align-content: center !important;
+}
+
+::ng-deep .ngx-pagination .current {
+  background: #17a2b8 !important;
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .btn-with-text {
+    display: none;
+  }
 }
 /*# sourceMappingURL=products.component.css.map */
