--- a/src/app/components/User_Component/home/home.component.html
+++ b/src/app/components/User_Component/home/home.component.html
@@ -5,7 +5,9 @@
     </h1>
     <div class="row">
       <div class="col text-center">
-        <h5 class="font-weight-bold">Not a member?</h5>
+        <h5 class="font-weight-bold">
+          <a [routerLink]="['/registration']"> Not a member?</a>
+        </h5>
       </div>
     </div>
     <div id="card-container" class="row my-5">
