--- a/src/app/components/findstore/findstore.component.scss
+++ b/src/app/components/findstore/findstore.component.scss
@@ -6,5 +6,6 @@
 // font-family: 'Roboto Slab', serif;
 
 #findstore {
-  background-color: #f2f2f2
+  background-color: #f2f2f2;
+  margin: 0px -15px;
 }
