--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,7 +46,9 @@
           ></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link navbar-item" href="#">Link</a>
+          <a class="nav-link navbar-item" [routerLink]="['cartify/products']"
+            >All Products</a
+          >
         </li>
       </ul>
     </div>
@@ -99,8 +101,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link navbar-item"
-            >CART<i class="fas fa-shopping-cart ml-2"></i
-          ></a>
+            >CART<i class="fas fa-shopping-cart ml-2"
+              ><span class="badge badge-pill badge-info">10</span></i
+            ></a
+          >
         </li>
       </ul>
     </div>
@@ -131,8 +135,8 @@
           class="close"
           data-dismiss="modal"
           id="closeModal"
-          (click)="openmodel(id)"
         >
+          <!-- (click)="openmodel(id)" -->
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
