--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -44,22 +44,15 @@
         <div class="carousel-item">
           <img
             class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/blue-jeans.jpg"
+            src="./../../../assets/img/fila.jpg"
             alt="6 slide"
           />
         </div>
         <div class="carousel-item">
           <img
             class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/fila.jpg"
-            alt="7 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
             src="./../../../assets/img/men-outfit.jpg"
-            alt="8 slide"
+            alt="7 slide"
           />
         </div>
       </div>
@@ -70,7 +63,8 @@
       Looks the same. Made a whole lot smarter.
     </h2>
     <p>
-      Outdoor gear that makes you smarter by being safer. Shop
+      Sport gear that makes you smarter by being safer.
+      <a [routerLink]="['/cartify/products/category/sport']"> Shop now!</a>
     </p>
   </div>
 </div>
