--- a/src/app/components/trending/trending.component.css
+++ b/src/app/components/trending/trending.component.css
@@ -26,6 +26,7 @@ p {
 hr {
   border: none;
   background-color: #dcdcdc;
-  height: 3px;
+  height: 2px;
+  margin: 0px 130px;
 }
 /*# sourceMappingURL=trending.component.css.map */
