--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar (taskEmitter)="dataFromChild($event)"></app-navbar>
 <div class="container-fluid">
   <!-- <div class="row">
     <div class="col-12">
