--- a/src/app/components/User_Component/home/home.component.html
+++ b/src/app/components/User_Component/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="home-component" class="row p-4">
   <div class="col">
     <h1 class="text-center">
-      Hello, {{ currUser.first_name }} {{ currUser.last_name }}
+      Hello, {{ loggedUser.first_name }} {{ loggedUser.last_name }}
     </h1>
     <div class="row">
       <div class="col text-center">
