added adding order controller, brand category in seeder, cartService, add products to cart but not quantity

--- a/src/app/components/Product_Component/details/details.component.css
+++ b/src/app/components/Product_Component/details/details.component.css
@@ -7,7 +7,11 @@ p {
   font-family: "Roboto", sans-serif;
 }
 
-button {
-  background-color: #00485B;
+.add-btn {
+  margin-left: 10px;
+}
+
+.minus-btn {
+  margin-right: 10px;
 }
 /*# sourceMappingURL=details.component.css.map */
