--- a/src/app/components/Product_Component/details/details.component.html
+++ b/src/app/components/Product_Component/details/details.component.html
@@ -1,31 +1,97 @@
-<div id="details" class="row">
-  <div class="col-md-6">
+<div id="details" *ngIf="oneProduct" class="row">
+  <!-- <div class="col-md-6">
     <img src="{{ oneProduct.imagePath }}" />
-    <p class="text-info">{{ oneProduct.description }}</p>
-  </div>
+  </div> -->
   <div class="col-md-6">
     <h1>{{ oneProduct.name }}</h1>
+    <p class="text-info">{{ oneProduct.description }}</p>
     <p class="text-info">$ {{ oneProduct.price }}</p>
-    <form (ngSubmit)="addToCart(oneProduct._id)">
-      <button>Add to cart</button>
-    </form>
-  </div>
-</div>
-<!-- <div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img src="..." class="card-img" alt="..." />
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">{{ oneProduct.name }}</h5>
-          <p class="card-text">
-            {{ oneProduct.description }}
-          </p>
-          <p class="card-text">
-            <small class="text-muted">{{ oneProduct.price }}</small>
-          </p>
+    <!-- <div class="card">
+      <div class="card-body">
+        <div class="card-title">
+          <h1>{{ oneProduct.name }}</h1>
+          <h2 class="text-info">{{ oneProduct.description }}</h2>
+          <p class="text-info">${{ oneProduct.price }}</p>
+          <button (click)="minusCount()" class="btn minus-btn" type="button">
+            <i class="fas fa-minus"></i>
+          </button>
+          <input
+            [(ngModel)]="quantity"
+            type="text"
+            class="form-control col-2 text-center"
+            id="inlineFormInputGroupUsername"
+          />
+          <button (click)="addCount()" class="btn add-btn" type="button">
+            <i class="fas fa-plus"></i>
+          </button>
+
+          <button
+            (click)="addToShoppingCart(oneProduct._id, quantity)"
+            class="btn btn-secondary"
+          >
+            Add to cart
+          </button>
         </div>
       </div>
+    </div> -->
+
+    <!-- <div class="form-group">
+      <div class="form-control col-md-6 offset-md-4">
+        <h1 [(ngModel)]="addProduct.quantity">
+          quantity of product {{ addProduct.quantity }}
+        </h1>
+        <button (click)="minusCount()" class="btn minus-btn" type="button">
+          <i class="fas fa-minus"></i>
+        </button>
+        <input
+          type="text"
+          class="form-control col-2 text-center"
+          id="inlineFormInputGroupUsername"
+        />
+        <button (click)="addCount()" class="btn add-btn" type="button">
+          <i class="fas fa-plus"></i>
+        </button>
+      </div>
     </div>
-  </div> -->
+    <div class="col m-2">
+      <button class="btn btn-primary col-6">
+        Add to cart
+      </button>
+    </div> -->
+    <!-- <form
+      (ngSubmit)="addToOrder(oneProduct._id)"
+      #formData="ngForm"
+      class=" align-items-center"
+    > -->
+      <div class="form-row">
+        <div class="input-group col-md-6 offset-md-4">
+          <button (click)="minusCount()" class="btn minus-btn" type="button">
+            <i class="fas fa-minus"></i>
+          </button>
+          <input
+            type="text"
+            [(ngModel)]="quantity"
+            name="quantity"
+            class="form-control col-2 text-center"
+            id="inlineFormInputGroupUsername"
+          />
+          <!-- <input
+          type="text"
+          [(ngModel)]="addProduct.quantity"
+          name="addProduct.quantity"
+          class="form-control col-2 text-center"
+          id="inlineFormInputGroupUsername"
+        /> -->
+          <button (click)="addCount()" class="btn add-btn" type="button">
+            <i class="fas fa-plus"></i>
+          </button>
+        </div>
+      </div>
+      <div class="col m-2">
+        <button (click)="addToOrder(oneProduct._id, quantity)" class="btn btn-primary col-6">
+          Add to cart
+        </button>
+      </div>
+    <!-- </form> -->
+  </div>
+</div>
