able to add/delete items from cart, badge # on cart icon qty of items, created service for sharing user/cart data, create cart with session, changed logo, craeted redirect guard for google sign in

--- a/src/app/components/Product_Component/products/products.component.css
+++ b/src/app/components/Product_Component/products/products.component.css
@@ -7,6 +7,14 @@ p {
   font-family: "Roboto", sans-serif;
 }
 
+p small {
+  color: green;
+}
+
+.product-price {
+  color: red;
+}
+
 .search-bar {
   position: relative;
 }
@@ -15,6 +23,11 @@ p {
   position: absolute;
   right: 30px;
   top: 8px;
+}
+
+.card-deck {
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .card {
@@ -33,6 +46,20 @@ p {
 @media (min-width: 768px) and (max-width: 991.98px) {
   .btn-with-text {
     display: none;
+  }
+}
+
+.number {
+  display: block;
+}
+
+input {
+  text-align: center;
+}
+
+@media screen and (min-width: 575.98px) {
+  input {
+    margin-left: 15px;
   }
 }
 /*# sourceMappingURL=products.component.css.map */
