finished Cart function making it possible to add items with its quantities to the cart session

--- a/src/app/components/Product_Component/details/details.component.html
+++ b/src/app/components/Product_Component/details/details.component.html
@@ -1,50 +1,20 @@
 <div id="details" *ngIf="oneProduct" class="row">
-  <!-- <div class="col-md-6">
+  <div class="col-md-6">
     <img src="{{ oneProduct.imagePath }}" />
-  </div> -->
+  </div>
   <div class="col-md-6">
     <h1>{{ oneProduct.name }}</h1>
-    <p class="text-info">{{ oneProduct.description }}</p>
-    <p class="text-info">$ {{ oneProduct.price }}</p>
-    <!-- <div class="card">
-      <div class="card-body">
-        <div class="card-title">
-          <h1>{{ oneProduct.name }}</h1>
-          <h2 class="text-info">{{ oneProduct.description }}</h2>
-          <p class="text-info">${{ oneProduct.price }}</p>
-          <button (click)="minusCount()" class="btn minus-btn" type="button">
-            <i class="fas fa-minus"></i>
-          </button>
-          <input
-            [(ngModel)]="quantity"
-            type="text"
-            class="form-control col-2 text-center"
-            id="inlineFormInputGroupUsername"
-          />
-          <button (click)="addCount()" class="btn add-btn" type="button">
-            <i class="fas fa-plus"></i>
-          </button>
-
-          <button
-            (click)="addToShoppingCart(oneProduct._id, quantity)"
-            class="btn btn-secondary"
-          >
-            Add to cart
-          </button>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- <div class="form-group">
-      <div class="form-control col-md-6 offset-md-4">
-        <h1 [(ngModel)]="addProduct.quantity">
-          quantity of product {{ addProduct.quantity }}
-        </h1>
+    <h2 class="text-info">{{ oneProduct.description }}</h2>
+    <p class="text-info">${{ oneProduct.price }}</p>
+    <div class="form-row">
+      <div class="input-group col-md-6 offset-md-4">
         <button (click)="minusCount()" class="btn minus-btn" type="button">
           <i class="fas fa-minus"></i>
         </button>
         <input
           type="text"
+          [(ngModel)]="qty"
+          name="qty"
           class="form-control col-2 text-center"
           id="inlineFormInputGroupUsername"
         />
@@ -54,44 +24,13 @@
       </div>
     </div>
     <div class="col m-2">
-      <button class="btn btn-primary col-6">
+      <button
+        (click)="addToOrder(oneProduct._id, qty)"
+        type="button"
+        class="btn btn-primary col-6"
+      >
         Add to cart
       </button>
-    </div> -->
-    <!-- <form
-      (ngSubmit)="addToOrder(oneProduct._id)"
-      #formData="ngForm"
-      class=" align-items-center"
-    > -->
-      <div class="form-row">
-        <div class="input-group col-md-6 offset-md-4">
-          <button (click)="minusCount()" class="btn minus-btn" type="button">
-            <i class="fas fa-minus"></i>
-          </button>
-          <input
-            type="text"
-            [(ngModel)]="quantity"
-            name="quantity"
-            class="form-control col-2 text-center"
-            id="inlineFormInputGroupUsername"
-          />
-          <!-- <input
-          type="text"
-          [(ngModel)]="addProduct.quantity"
-          name="addProduct.quantity"
-          class="form-control col-2 text-center"
-          id="inlineFormInputGroupUsername"
-        /> -->
-          <button (click)="addCount()" class="btn add-btn" type="button">
-            <i class="fas fa-plus"></i>
-          </button>
-        </div>
-      </div>
-      <div class="col m-2">
-        <button (click)="addToOrder(oneProduct._id, quantity)" class="btn btn-primary col-6">
-          Add to cart
-        </button>
-      </div>
-    <!-- </form> -->
+    </div>
   </div>
 </div>
