--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -3,6 +3,10 @@ h1 {
   font-family: "Domine", serif;
 }
 
+h2 {
+  font-family: "Archivo Black", sans-serif;
+}
+
 h5 {
   font-family: "Roboto Condensed", sans-serif;
   display: inline;
