--- a/src/app/components/Product_Component/details/details.component.html
+++ b/src/app/components/Product_Component/details/details.component.html
@@ -1,12 +1,12 @@
-<div id="details" *ngIf="oneProduct" class="row">
-  <div class="col-md-6">
-    <img src="{{ oneProduct.imagePath }}" />
+<div id="details" *ngIf="oneProduct" class="row mt-5">
+  <div class="col-md-6 py-auto">
+    <img class="img-fluid" src="{{ oneProduct.imagePath }}" />
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 my-auto">
     <h1>{{ oneProduct.name }}</h1>
     <h2 class="text-info">{{ oneProduct.description }}</h2>
-    <p class="text-info">${{ oneProduct.price }}</p>
-    <div class="form-row">
+    <h4 class="text-info">${{ oneProduct.price }}</h4>
+    <!-- <div class="form-row">
       <div class="input-group col-md-6 offset-md-4">
         <button (click)="minusCount()" class="btn minus-btn" type="button">
           <i class="fas fa-minus"></i>
@@ -22,11 +22,13 @@
           <i class="fas fa-plus"></i>
         </button>
       </div>
-    </div>
-    <div class="col m-2">
+    </div> -->
+    <div class="col mt-4">
       <button
-        (click)="addToOrder(oneProduct._id, qty)"
+        (click)="addToOrder(oneProduct._id)"
         type="button"
+        data-toggle="modal"
+        data-target="#addToCartModal"
         class="btn btn-primary col-6"
       >
         Add to cart
@@ -34,3 +36,70 @@
     </div>
   </div>
 </div>
+
+<!-- Modal -->
+<ng-container *ngIf="oneProduct">
+  <div
+    class="modal fade"
+    id="addToCartModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">
+            <i class="fas fa-check-circle"></i> Added to cart
+          </h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <img class="img-fluid" src="{{ oneProduct.imagePath }}" />
+              </div>
+              <div class="col-md-4">
+                <p>{{ oneProduct.brand }}</p>
+                <p>{{ oneProduct.name }}</p>
+              </div>
+            </div>
+            <div class="row">
+              <h5 class="pt-3">
+                Cart subtotal: ${{ cart.totalPrice }} ({{ cart.totalQty }}
+                items)
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button
+            [routerLink]="['/cartify/cart']"
+            id="closeModal"
+            type="button"
+            data-dismiss="modal"
+            class="btn btn-info"
+          >
+            Cart & Checkout
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-info btn-checkout"
+            data-dismiss="modal"
+          >
+            Continue shopping
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-container>
