--- a/src/app/components/User_Component/account/personal/personal.component.css
+++ b/src/app/components/User_Component/account/personal/personal.component.css
@@ -1,2 +1,29 @@
-@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Archivo|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+
+h1 {
+  font-family: "Domine", serif;
+  font-size: 40px;
+  line-height: 1.3;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+}
+
+.asterisk-label:before {
+  color: red;
+  content: "*";
+  position: absolute;
+  margin-left: -10px;
+}
+
+small {
+  margin-left: 10px;
+}
+
+button {
+  background-color: #426C90;
+  color: #ffff;
+}
+
 /*# sourceMappingURL=personal.component.css.map */
