--- a/src/app/components/User_Component/account/personal/personal.component.scss
+++ b/src/app/components/User_Component/account/personal/personal.component.scss
@@ -1,6 +1,44 @@
-@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Archivo|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
 // font-family: 'Archivo Black', sans-serif;
 // font-family: 'Domine', serif;
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
+$font-h2:'Archivo Black',
+sans-serif;
+
+$font-nav:'Roboto Slab',
+serif;
+
+$font-h1:'Domine',
+serif;
+
+$font-generic:'Roboto',
+sans-serif;
+
+
+h1 {
+  font-family: $font-h1;
+  font-size: 40px;
+  line-height: 1.3;
+}
+
+p {
+  font-family: $font-generic;
+}
+
+.asterisk-label:before {
+  color: red;
+  content: "*";
+  position: absolute;
+  margin-left: -10px;
+}
+
+small {
+  margin-left: 10px;
+}
+
+button {
+  background-color: #426C90;
+  color: #ffff;
+}
