--- a/src/app/components/User_Component/account/personal/personal.component.scss
+++ b/src/app/components/User_Component/account/personal/personal.component.scss
@@ -42,3 +42,12 @@ button {
   background-color: #426C90;
   color: #ffff;
 }
+
+.alert {
+  margin: 0 -15px;
+}
+
+.btn-close {
+  background-color: #D4EDDA;
+  color: #000
+}
