--- a/src/app/components/User_Component/account/personal/personal.component.html
+++ b/src/app/components/User_Component/account/personal/personal.component.html
@@ -1,7 +1,11 @@
+<ng-container *ngIf="success">
   <div class="row">
     <div class="col">
-      <div class="alert alert-success" role="alert">
-        User information edit was successfull!
+      <div class="alert text-center alert-success" role="alert">
+        <strong>Success!</strong> Personal information updated
+        <button type="button" class="close btn-close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
     </div>
   </div>
@@ -9,7 +13,7 @@
 <div class="row pt-5">
   <div *ngIf="user" class="container">
     <div class="row">
-      <div class="col-lg-7">
+      <div class="col-lg-10">
         <h1 class="mb-4">Your personal details</h1>
         <h2>About you</h2>
 
@@ -19,66 +23,170 @@
           #formData="ngForm"
           class="needs-validation"
           novalidate
+          justify-content-center
         >
-          <div class="form-group">
-            <div class="row">
-              <div class="col-12">
-                <label for="first_name">First name*</label>
-                <input
-                  type="text"
-                  class="form-control mb-3"
-                  required
-                  name="user.first_name"
-                  [(ngModel)]="user.first_name"
-                  #first_name="ngModel"
-                />
-              </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="first_name">First name*</label>
+              <input
+                type="text"
+                class="form-control mb-3"
+                required
+                name="user.first_name"
+                [(ngModel)]="user.first_name"
+                #first_name="ngModel"
+              />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="last_name">Last name*</label>
+              <input
+                type="text"
+                class="form-control mb-3"
+                required
+                name="user.last_name"
+                [(ngModel)]="user.last_name"
+                #last_name="ngModel"
+              />
             </div>
           </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-12">
-                <label for="last_name">Last name*</label>
-                <input
-                  type="text"
-                  class="form-control mb-3"
-                  required
-                  name="user.last_name"
-                  [(ngModel)]="user.last_name"
-                  #last_name="ngModel"
-                />
-              </div>
+          <div class="form-row">
+            <div class="form-group col">
+              <label for="address_line_1">Address line 1*</label>
+              <input
+                type="text"
+                class="form-control mb-3"
+                required
+                name="user.address.street1"
+                [(ngModel)]="user.address.street1"
+                #street="ngModel"
+              />
             </div>
           </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-12">
-                <label for="email"
-                  >Email address* {{ user.local.email | json }}</label
-                >
-                <input
-                  type="email"
-                  class="form-control mb-3"
-                  [class.is-invalid]="email.dirty && email.invalid"
-                  required
-                  pattern="^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$"
-                  name="user.email"
-                  [(ngModel)]="user.local.email"
-                  #email="ngModel"
-                />
-                <div class="invalid-feedback">
-                  Must be a valid email
-                </div>
+          <div class="form-row">
+            <div class="form-group col">
+              <label for="address_line_2">Address line 2</label>
+              <input
+                type="text"
+                class="form-control mb-3"
+                required
+                name="user.address.street2"
+                [(ngModel)]="user.address.street2"
+                #street="ngModel"
+              />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-sm-4">
+              <label for="city">City*</label>
+              <input
+                type="text"
+                class="form-control mb-3"
+                required
+                name="user.address.city"
+                [(ngModel)]="user.address.city"
+                #city="ngModel"
+              />
+            </div>
+            <div class="form-group col-sm-4">
+              <label for="state">State*</label>
+              <select
+                class="form-control"
+                id="state"
+                required
+                name="user.address.state"
+                [(ngModel)]="user.address.state"
+                #state="ngModel"
+              >
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+              </select>
+            </div>
+            <div class="form-group col-sm-4">
+              <label for="zip">Zip code*</label>
+              <input
+                type="text"
+                class="form-control"
+                name="user.address.zip"
+                [(ngModel)]="user.address.zip"
+                id="zip"
+                #zip="ngModel"
+                minlength="5"
+                pattern="^(0|[1-9][0-9]*)$"
+                zip="ngModel"
+                required
+              />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col">
+              <label for="email">Email address*</label>
+              <input
+                type="email"
+                class="form-control mb-3"
+                [class.is-invalid]="email.dirty && email.invalid"
+                required
+                pattern="^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$"
+                name="user.local.email"
+                [(ngModel)]="user.local.email"
+                #email="ngModel"
+              />
+              <div class="invalid-feedback">
+                Must be a valid email
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <button
-                type="submit"
-                class="btn mt-3"
-                [disabled]="formData.invalid"
-              >
+              <button type="submit" class="btn" [disabled]="formData.invalid">
                 Save changes
               </button>
             </div>
