--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,6 @@
       <a class="navbar-brand navbar-item" [routerLink]="['/cartify']"
         ><img id="brand-logo" src="./../../../favicon.png"
       /></a>
-
       <button
         class="navbar-toggler ml-auto custom-toggler"
         type="button"
@@ -56,19 +55,20 @@
   <div class="collapse navbar-collapse col-lg-4 flex-end" id="toggleContent">
     <div class="row">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a
-            id="login"
-            *ngIf="!_authService.loggedIn()"
-            class="nav-link navbar-item"
-            data-toggle="modal"
-            data-target="#modalForm"
-            role="button"
-            aria-expanded="false"
-            aria-controls="collapseExample"
-            >SIGN IN<i class="fa fa-user ml-2"></i
-          ></a>
-        </li>
+        <ng-container *ngIf="!_authService.loggedIn()">
+          <li class="nav-item">
+            <a
+              id="login"
+              class="nav-link navbar-item"
+              data-toggle="modal"
+              data-target="#modalForm"
+              role="button"
+              aria-expanded="false"
+              aria-controls="collapseExample"
+              >SIGN IN<i class="fa fa-user ml-2"></i
+            ></a>
+          </li>
+        </ng-container>
         <ng-container *ngIf="_authService.loggedIn()">
           <li class="nav-item dropdown">
             <a
@@ -80,11 +80,12 @@
               >My Account<i class="fa fa-user ml-2"></i
             ></a>
             <div class="dropdown-menu" aria-labelledby="rightDropdown">
-              <a
-                (click)="selectAccount(currUser.user._id)"
+              <button
+                [routerLink]="['personal', loggedUser._id]"
                 class="dropdown-item"
-                >Account</a
               >
+                Account
+              </button>
               <a
                 [routerLink]="['cartify']"
                 class="dropdown-item"
@@ -100,13 +101,16 @@
           ></a>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['cartify/cart']" class="nav-link navbar-item"
-            >CART<i class="fas fa-shopping-cart ml-2"
-              ><span *ngIf="cart" class="badge badge-pill badge-info">{{
+          <a
+            *ngIf="cart && _authService.loggedIn()"
+            [routerLink]="['cartify/cart']"
+            class="nav-link navbar-item"
+            >CART<i class="fas fa-shopping-cart ml-2">
+              <span class="badge badge-pill badge-info">{{
                 cart.totalQty
               }}</span></i
-            ></a
-          >
+            >
+          </a>
         </li>
       </ul>
     </div>
@@ -138,7 +142,6 @@
           data-dismiss="modal"
           id="closeModal"
         >
-          <!-- (click)="openmodel(id)" -->
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
