included signin setTimeout, routerLink to specific product category, checkout ui, update/add user personal information, create product if admin wants to

--- a/src/app/components/Product_Component/details/details.component.html
+++ b/src/app/components/Product_Component/details/details.component.html
@@ -38,7 +38,7 @@
 </div>
 
 <!-- Modal -->
-<ng-container *ngIf="oneProduct">
+<ng-container *ngIf="oneProduct && cart">
   <div
     class="modal fade"
     id="addToCartModal"
