--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -1,24 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Archivo|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Archivo|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
 // font-family: 'Archivo Black', sans-serif;
 // font-family: 'Domine', serif;
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
-$font-h2:'Archivo Black',
-sans-serif;
+$font-h2: "Archivo Black", sans-serif;
 
-$font-nav:'Roboto Slab',
-serif;
+$font-nav: "Roboto Slab", serif;
 
-$font-h1:'Domine',
-serif;
+$font-h1: "Domine", serif;
 
-$font-h4:'Roboto Condensed',
-sans-serif;
+$font-h4: "Roboto Condensed", sans-serif;
 
-$font-generic:'Roboto',
-sans-serif;
-
+$font-generic: "Roboto", sans-serif;
 
 h1 {
   font-family: $font-h1;
@@ -54,7 +48,7 @@ small {
 }
 
 button {
-  background-color: #426C90 !important;
+  background-color: #426c90 !important;
   color: #ffff;
 
   &:hover {
@@ -67,8 +61,8 @@ button {
 }
 
 .btn-close {
-  background-color: #D4EDDA;
-  color: #000
+  background-color: #d4edda;
+  color: #000;
 }
 
 #close-btn {
@@ -76,5 +70,18 @@ button {
 }
 
 #close-icon {
-  color: #000
+  color: #000;
+}
+
+#card-header-summary {
+  border-bottom: 1px solid #426c90;
+}
+
+#card-footer-summary {
+  border-top: 1px solid #426c90;
+}
+
+#close-btn {
+  background-color: transparent !important;
+  color: #000;
 }
